--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -917,7 +917,7 @@
     "def distance_all(selected_individual, neighbors):\n",
     "    with_distances=[]\n",
     "    for neighbor in neighbors:\n",
-    "        neighbor['distance_from_selected']=distance_from_select\n",
+    "        neighbor['distance_from_selected']=distance_from_selected(selected_individual,)\n",
     "    return with_distances"
    ]
   },
