automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -918,7 +918,7 @@
     "    with_distances=[]\n",
     "    for neighbor in neighbors:\n",
     "        neighbor['distance_from_selected']=distance_from_selected(selected_individual,neighbor)\n",
-    "    return with"
+    "    return neighbors"
    ]
   },
   {
