--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -910,43 +910,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    for neighbor in neighbors:\n",
-    "        neighbor['distance_from_selected']=distance_from_selected(selected_individual,neighbor)\n",
+    "        neighbor['distance_from_selected']=distance_between_neighbors(selected_individual,neighbor)\n",
     "    return neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'pickup_latitude': 40.64499,\n",
+       "[{'trip_distance': 18.38,\n",
+       "  'pickup_latitude': 40.64499,\n",
        "  'pickup_longitude': -73.78115,\n",
-       "  'trip_distance': 18.38,\n",
-       "  'distance_from_selected': 0.24242215976473674},\n",
-       " {'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'trip_distance': 18.38,\n",
-       "  'distance_from_selected': 0.24242215976473674},\n",
-       " {'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'trip_distance': 18.38,\n",
-       "  'distance_from_selected': 0.24242215976473674},\n",
-       " {'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'trip_distance': 18.38,\n",
-       "  'distance_from_selected': 0.24242215976473674}]"
+       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
+       "   'pickup_longitude': -73.78115,\n",
+       "   'trip_distance': 18.38,\n",
+       "   'distance_from_selected': 0.24242215976473674}},\n",
+       " {'trip_distance': 1.3,\n",
+       "  'pickup_latitude': 40.766931,\n",
+       "  'pickup_longitude': -73.982098,\n",
+       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
+       "   'pickup_longitude': -73.78115,\n",
+       "   'trip_distance': 18.38,\n",
+       "   'distance_from_selected': 0.24242215976473674}},\n",
+       " {'trip_distance': 4.5,\n",
+       "  'pickup_latitude': 40.77773,\n",
+       "  'pickup_longitude': -73.951902,\n",
+       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
+       "   'pickup_longitude': -73.78115,\n",
+       "   'trip_distance': 18.38,\n",
+       "   'distance_from_selected': 0.24242215976473674}},\n",
+       " {'trip_distance': 2.4,\n",
+       "  'pickup_latitude': 40.795678,\n",
+       "  'pickup_longitude': -73.971049,\n",
+       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
+       "   'pickup_longitude': -73.78115,\n",
+       "   'trip_distance': 18.38,\n",
+       "   'distance_from_selected': 0.24242215976473674}}]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
