--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -915,7 +915,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    for neighbor in neighbors:\n",
+    "    for i in list(range(0,len(neighbors))):\n",
     "        neighbor['distance_from_selected']=distance_between_neighbors(selected_individual,neighbor)\n",
     "    return neighbors"
    ]
