--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -910,57 +910,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    for i in list(range(0,len(neighbors))):\n",
-    "        neighbors[i]['distance_from_selected']=distance_between_neighbors(selected_individual,neighbors[i])\n",
+    "        neighbors[i]['distance_from_selected']=distance_location(selected_trip, neighbors[i])\n",
     "    return neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'trip_distance': 18.38,\n",
-       "  'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
-       "   'pickup_longitude': -73.78115,\n",
-       "   'trip_distance': 18.38,\n",
-       "   'distance_from_selected': 0.24242215976473674}},\n",
-       " {'trip_distance': 1.3,\n",
-       "  'pickup_latitude': 40.766931,\n",
-       "  'pickup_longitude': -73.982098,\n",
-       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
-       "   'pickup_longitude': -73.78115,\n",
-       "   'trip_distance': 18.38,\n",
-       "   'distance_from_selected': 0.24242215976473674}},\n",
-       " {'trip_distance': 4.5,\n",
-       "  'pickup_latitude': 40.77773,\n",
-       "  'pickup_longitude': -73.951902,\n",
-       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
-       "   'pickup_longitude': -73.78115,\n",
-       "   'trip_distance': 18.38,\n",
-       "   'distance_from_selected': 0.24242215976473674}},\n",
-       " {'trip_distance': 2.4,\n",
-       "  'pickup_latitude': 40.795678,\n",
-       "  'pickup_longitude': -73.971049,\n",
-       "  'distance_from_selected': {'pickup_latitude': 40.64499,\n",
-       "   'pickup_longitude': -73.78115,\n",
-       "   'trip_distance': 18.38,\n",
-       "   'distance_from_selected': 0.24242215976473674}}]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'selected_trip' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-46-2f8b2fe64dab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcleaned_trips\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mdistance_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_trip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcleaned_trips\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-45-0e0bd0dd417f>\u001b[0m in \u001b[0;36mdistance_all\u001b[0;34m(selected_individual, neighbors)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdistance_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselected_individual\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mneighbors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mneighbors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'distance_from_selected'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdistance_location\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mselected_trip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mneighbors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'selected_trip' is not defined"
+     ]
     }
    ],
    "source": [
