automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -917,7 +917,7 @@
     "def distance_all(selected_individual, neighbors):\n",
     "    for i in list(range(0,len(neighbors))):\n",
     "        neighbors[i]['distance_from_selected']=distance_location(selected_individual, neighbors[i])\n",
-    "    return neighbors"
+    "    return list(filter(lambda x: xneighbors"
    ]
   },
   {
