--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -910,9 +910,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-49-cac361847a41>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-cac361847a41>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return list(filter(lambda neighbor: neighbor['distance_from_selected']!=0, neighbors)\u001b[0m\n\u001b[0m                                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    for i in list(range(0,len(neighbors))):\n",
